--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
       <div id="navbarPrincipal" class="collapse navbar-collapse">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a href="#" class="nav-link">Seletor de cor</a>
+            <a href="index.html" class="nav-link">Seletor de cor</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Contador</a>
+            <a href="contador.html" class="nav-link">Contador</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Cronômetro</a>
+            <a href="cronometro.html" class="nav-link">Cronômetro</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link font-italic">To-do-list</a>
+            <a href="to-do-list.html" class="nav-link font-italic">To-do-list</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Contagem regressiva</a>
