--- a/cronometro.html
+++ b/cronometro.html
@@ -56,7 +56,7 @@
             <a href="to-do-list.html" class="nav-link">To Do List</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Contagem regressiva</a>
+            <a href="contagem-regressiva.html" class="nav-link">Contagem regressiva</a>
           </li>
         </ul>
       </div>
