--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a href="to-do-list.html" class="nav-link font-italic">To-do-list</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Contagem regressiva</a>
+            <a href="contagem-regressiva.html" class="nav-link">Contagem regressiva</a>
           </li>
         </ul>
       </div>
